--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-0",
+    "vue-router": "^4.0.0-beta.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
